# slam-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
examples/: bundle_adjustment.rs  depth_estimation.rs  point_cloud.rs  visual_odometry.rs  visualize_features.rs
src/: lib.rs  main.rs
src/depth/: mod.rs  monodepth2.rs
src/feature/: detector.rs  matcher.rs  mod.rs
src/mapping/: bundle_adjustment.rs  keyframe.rs  map.rs  mod.rs  triangulation.rs
src/odometry/: camera.rs  mod.rs  pose.rs  trajectory.rs
weights/: .gitignore  README.md
