[package]
name = "slamkit-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust library for implementing SLAM systems"
repository = "https://github.com/mostlykiguess/slam-rs"
license = "MIT"
readme = "README.md"
keywords = ["slam", "rust", "computer-vision", "visual-slam"]
categories = ["computer-vision", "science::robotics"]

[dependencies]
opencv = "0.97.1"
nalgebra = "0.34.1"
bevy = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.145"
