[package]
name = "slamkit-rs"
version = "0.2.1"
edition = "2024"
description = "A Rust library for implementing SLAM systems"
repository = "https://github.com/mostlykiguess/slam-rs"
license = "MIT"
readme = "README.md"
keywords = ["slam", "rust", "computer-vision", "visual-slam"]
categories = ["computer-vision", "science::robotics"]

[dependencies]
opencv = "0.97.1"
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
serde = "1.0.228"
serde_json = "1.0.145"
rerun = { version = "0.26.2", optional = true }
clap = { version = "4.5.51", features = ["derive"] }

[features]
default = []
rerun = ["dep:rerun"]
